<resources>
    <string name="app_name">Library Management System</string>
    <string name="toc">
        Terms and Conditions for Library Management System (LMS)
        Effective Date:  September 28, 2024
    </string>
    <string name="toc_1">
        1. <b>Introduction</b>\nWelcome to Library Management System (LMS), a platform designed for managing library operations, including cataloging, user accounts, borrowing, and tracking library resources. By using our services, you agree to comply with these terms and conditions. Please read them carefully.
    </string>
    <string name="toc_2">
        2. <b>Acceptance of Terms</b>\nBy creating an account and accessing or using LMS, you accept and agree to be bound by these Terms and Conditions, as well as our Privacy Policy. If you do not agree, you may not use the service.
    </string>
    <string name="toc_3">
        3. <b>Account Creation</b>\n• Eligibility: You must be at least 18 years of age to create an account on LMS. If you are under 18, parental consent is required.\n• Account Information: You agree to provide accurate, current, and complete information during registration. You are responsible for maintaining the confidentiality of your account credentials and for any activity that occurs under your account.\n• Prohibited Activities: You may not use LMS to engage in any unlawful, abusive, or harmful activities.
    </string>
    <string name="toc_4">
        4. <b>User Responsibilities</b>\n• Proper Use: Users must use the platform in accordance with all applicable laws and regulations. Unauthorized access to library resources, data manipulation, or any attempt to disrupt services is strictly prohibited.\n• Library Resource Borrowing: Users are responsible for returning borrowed items within the specified loan period. Late fees may apply for overdue items.\n• Data Integrity: You must not upload, distribute, or otherwise disseminate any content that is harmful, defamatory, or infringes on intellectual property rights.
    </string>
    <string name="toc_5">
        5. <b>Content Ownership and Licensing</b>\n• User-Generated Content: By submitting or uploading content (e.g., reviews, feedback) to LMS, you grant us a non-exclusive, royalty-free, worldwide license to use, modify, and display the content as necessary for the operation of the platform.\n• Library Content: All books, materials, and resources available through LMS are the property of the respective libraries or publishers and are protected by copyright and other intellectual property laws.
    </string>
    <string name="toc_6">
        6. <b>Privacy Policy</b>\nOur use of your personal data is governed by our Privacy Policy, which you can review [here]. By using LMS, you agree to our collection and use of personal information in accordance with the policy.

    </string>
    <string name="toc_7">
        7. <b>Termination and Suspension</b>\n• Termination by You: You may terminate your account at any time by contacting our support team. Upon termination, you will lose access to all features and borrowed materials.\n• Termination by LMS: We reserve the right to suspend or terminate your account at our discretion for violations of these terms or any other inappropriate activity.
    </string>
    <string name="toc_8">
        8. <b>Disclaimer of Warranties</b>\nLMS is provided "as is" and "as available" without warranties of any kind, either express or implied. We do not warrant that the service will be uninterrupted, secure, or free from errors.
    </string>
    <string name="toc_9">
        9. <b>Limitation of Liability</b>\nTo the fullest extent permitted by law, LMS shall not be liable for any indirect, incidental, special, consequential, or punitive damages arising out of your use or inability to use the service.
    </string>
    <string name="toc_10">
        10. <b>Modifications to Terms</b>\nLMS reserves the right to modify or update these Terms and Conditions at any time. Changes will be effective upon posting on the platform. Your continued use of the service after any changes indicates your acceptance of the new terms.
    </string>
    <string name="toc_11">
        11. <b>Governing Law</b>\nThese terms are governed by and construed in accordance with the laws of [Insert Jurisdiction]. Any disputes arising from the use of LMS will be resolved in the courts of [Insert Jurisdiction].
    </string>
    <string name="toc_12">
        12. <b>Contact Information</b>\nFor any questions about these Terms and Conditions or the services we provide, please contact us at:\n\n<b>email</b>: <U>lmsgroup2@gmail.com</U>\n\n<b>phone number</b>: 09476435821\n\nBy creating an account or using the LMS, you acknowledge that you have read, understood, and agreed to these Terms and Conditions.
    </string>
    <string name="PP">
        <b>Privacy Policy</b>\n\n
        Last updated: September 28, 2024\n\nThis Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy
    </string>
    <string name="PP_1">
        <b>Interpretation and Definitions</b>
    </string>
    <string name="PP_2">
        <b>Interpretation</b>\n\nThe words of which the initial letter is capitalized have meanings defined under the following conditions. The following definitions shall have the same meaning regardless of whether they appear in singular or in plural.\n\n<b>Definitions</b>\n\nFor the purposes of this Privacy Policy:\n\n<b>Account</b> means a unique account created for You to access our Service or parts of our Service.\n\n<b>Affiliate</b> means an entity that controls, is controlled by or is under common control with a party, where "control" means ownership of 50% or more of the shares, equity interest or other securities entitled to vote for election of directors or other managing authority.\n\n<b>Application</b> refers to Library Management System (LMS), the software program provided by the Company.\n\n<b>Company</b> (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to Library Management System (LMS).\n\n<b>Country</b> refers to: Philippines\n\n<b>Device</b> means any device that can access the Service such as a computer, a cellphone or a digital tablet.\n\n<b>Personal Data</b> is any information that relates to an identified or identifiable individual.\n\n<b>Service</b> refers to the Application.\n\n<b>Service Provider</b> means any natural or legal person who processes the data on behalf of the Company. It refers to third-party companies or individuals employed by the Company to facilitate the Service, to provide the Service on behalf of the Company, to perform services related to the Service or to assist the Company in analyzing how the Service is used.\n\n<b>Usage Data</b> refers to data collected automatically, either generated by the use of the Service or from the Service infrastructure itself (for example, the duration of a page visit).\n\n<b>You</b> means the individual accessing or using the Service, or the company, or other legal entity on behalf of which such individual is accessing or using the Service, as applicable.
    </string>
    <string name="PP_3">
        <b>Collecting and Using Your Personal Data</b>
    </string>
    <string name="change_password">Change Password</string>
    <string name="backbtn">BackBtn</string>
    <string name="your_password_must_be_at_least_8_characters_and_should_include_a_combination_of_numbers_letters_and_special_characters">Your password must be at least 8 characters and should include a combination of numbers, letters, and special characters (!@$%).</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="re_type_new_password">Re-type new password</string>
</resources>