<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/blur"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ChangePassword">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#C27B3C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnBackChangePass"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/backbtn"
            android:src="@drawable/arrow_back_" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="335dp"
            android:layout_height="110dp"
            android:gravity="center"
            android:fontFamily="@font/assistant_semibold"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="125dp"
            tools:layout_editor_absoluteY="38dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="350dp"
        android:layout_height="105dp"
        android:layout_marginTop="64dp"
        android:textColor="@color/white"
        android:text="@string/your_password_must_be_at_least_8_characters_and_should_include_a_combination_of_numbers_letters_and_special_characters"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="346dp"
        android:layout_height="49dp"
        android:autofillHints="password"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColorHint="@color/semi_transparent_white"
        android:textColorLink="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="346dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/new_password"
        android:padding="15dp"
        android:textColorHint="@color/semi_transparent_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="346dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/re_type_new_password"
        android:padding="15dp"
        android:textColorHint="@color/semi_transparent_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="#C27B3C"
        android:fontFamily="@font/anek_malayalam"
        android:text="@string/change_password"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        app:layout_constraintVertical_bias="0.597" />
</androidx.constraintlayout.widget.ConstraintLayout>